--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "server": "nodemon server.js",
     "client": "cd client && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "cd client && npm run build",
-    "install-client": "cd client && npm install"
+    "build": "cd client && npm install && npm run build",
+    "install-client": "cd client && npm install",
+    "vercel-build": "cd client && npm install && npm run build"
   },
   "keywords": ["url", "shortener", "mern", "react", "nodejs", "mongodb"],
   "author": "Your Name",
